syntax = "proto3";

import "base.proto";

package player;

// Services
service PlayerService{
  rpc RegisterExternal (RegisterExternalRequest) returns (RegisterExternalReply) {}
  rpc GetPlayers (GetPlayersRequest) returns (GetPlayersReply) {}
  rpc GetPlayerById (GetPlayerByIdRequest) returns (GetPlayerByIdReply) {}
  rpc UpdatePlayer (UpdatePlayerRequest) returns (UpdatePlayerReply) {}
  rpc SyncAzureAdToDb(SyncAzureAdToDbRequest) returns (SyncAzureAdToDbReply){}
  rpc UpdatePlayerPicture(UpdatePlayerPictureRequest) returns (UpdatePlayerPictureReply){}
  rpc DeletePlayerPicture(DeletePlayerPictureRequest) returns (DeletePlayerPictureReply){}
}

// Register
message RegisterExternalRequest {
  string fullName = 1;
  string nickname = 2;
  string email = 3;
}

message RegisterExternalReply {
  base.PlayerModel playerModel = 1;
}

// Get players
message GetPlayersRequest {
}

message GetPlayersReply {
  repeated base.PlayerModel playerModel = 1;
}

// Sync AzureAD users to DB
message SyncAzureAdToDbRequest{

}
message SyncAzureAdToDbReply{
  string message = 1;
}

// Get player by id
message GetPlayerByIdRequest {
  string playerId = 1;
}

message GetPlayerByIdReply {
  base.PlayerModel playerModel = 1;
}

// Update players
message UpdatePlayerRequest {
  base.PlayerModel playerModel = 1;
}

message UpdatePlayerReply {
  base.PlayerModel playerModel = 1;
}

// Update player picture
message UpdatePlayerPictureRequest {
  string playerId = 1;
  string base64Data = 2;
}

message UpdatePlayerPictureReply {
  string responseMessage = 1;
}

// Delete player picture
message DeletePlayerPictureRequest {
  string playerId = 1;
}

message DeletePlayerPictureReply {
  string responseMessage = 1;
}